activity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity
  namespace: activity
  labels:
    app: activity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity
  template:
    metadata:
      labels:
        app: activity
    spec:
      containers:
        - name: activity
          image: asia.gcr.io/stable-device-253005/go-grpc-microservices-activity
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
