activity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activity-service
  namespace: activity
  labels:
    app: activity
spec:
  selector:
    app: activity
  type: ClusterIP
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc-port
      protocol: TCP
