activity/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: activity-rule
  namespace: activity
spec:
  host: activity-service.activity.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
