activity/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: activity-route
  namespace: activity
spec:
  hosts:
    - activity-service.activity.svc.cluster.local
  http:
    - match:
        - port: 50051
      route:
        - destination:
            host: activity-service.activity.svc.cluster.local
            subset: v1
